--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Files that it doesn't need to be in your os #
+######################
 venv/
 whisper_usage.txt
